--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "android": "npx cap sync && npx cap open android"
   },
   "dependencies": {
+    "@azure/cosmos": "^4.2.0",
     "@capacitor/android": "^6.2.0",
     "@capacitor/cli": "^6.2.0",
     "@capacitor/core": "^6.2.0",
     "@quasar/extras": "^1.16.13",
+    "axios": "^1.7.8",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "quasar": "^2.17.4",
     "sass-loader": "^16.0.3",
     "vue": "^3.5.12",
