--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "android": "npx cap sync && npx cap open android"
+    "android": "npx cap sync && npx cap open android",
+    "backend": "node src/server/server.js",
+    "start": "concurrently \"npm run dev\" \"npm run backend\""
   },
   "dependencies": {
     "@azure/cosmos": "^4.2.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "concurrently": "^9.1.0",
     "sass": "^1.81.0",
     "vite": "^5.4.10"
   }
