--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "quasar": "^2.17.4",
     "sass-loader": "^16.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5",
-    "vuetify": "^3.7.4"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
