--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "quasar": "^2.17.4",
     "sass-loader": "^16.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-touch-events": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
